# agent-loop-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ko.md  README.md  llms-full.txt  llms.txt  pyproject.toml
src/loop_guard/: __init__.py  decision.py  guard.py  similarity.py  strategies.py
src/loop_guard/integrations/: generic.py
tests/: test_cycle_detection.py  test_e2e.py  test_guard.py  test_integrations.py  test_similarity.py  test_strategies.py
tests/fixtures/: scenarios.py
