[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-loop-guard"
version = "0.1.1"
description = "Framework-agnostic agent loop detection — sliding window similarity scoring to catch stuck agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "QuartzUnit" }]
keywords = [
    "agent",
    "loop",
    "detection",
    "guardrail",
    "safety",
    "llm",
    "ai-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/QuartzUnit/agent-loop-guard"
Repository = "https://github.com/QuartzUnit/agent-loop-guard"
Issues = "https://github.com/QuartzUnit/agent-loop-guard/issues"
Documentation = "https://github.com/QuartzUnit/agent-loop-guard#readme"
Changelog = "https://github.com/QuartzUnit/agent-loop-guard/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/loop_guard"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
